# clash-workshop

./: LICENSE  README.md  cabal.project  clash-workshop.cabal  fourmolu.yaml  hie.yaml
src/: CPU.hs  Day1.hs  Day1R.hs  Day2.hs  Day2R.hs
src/Clash/Feistel/: Ex1.hs  Ex2.hs  Impl1a.hs  Impl1b.hs  Impl1c.hs  Impl2a.hs  Impl2b.hs  Impl2c.hs  Impl3a.hs  Impl3b.hs  Impl3c.hs  Util.hs
src/Day3/: CodeGen.hs  Core.hs  CoreTypes.hs
tests/: doctests.hs  tests.hs
tests/Tests/Clash/: Feistel.hs
tests/Tests/Clash/Feistel/: Ex1.hs  Ex2.hs  Impl1.hs  Impl2b.hs
