cabal-version:       2.4
name:                clash-workshop
version:             0.1
license-file:        LICENSE
author:              Martijn Bastiaan
maintainer:          martijn@qbaylogic.com

common common-options
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    InstanceSigs
    KindSignatures
    MagicHash
    NoStarIsType
    NoImplicitPrelude
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeFamilies
    ViewPatterns
  ghc-options:
    -Wall
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver
  default-language: Haskell2010
  build-depends:
    base,
    Cabal,
    clash-prelude,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat,


library
  import:              common-options
  hs-source-dirs: src
  exposed-modules:
    Clash.Feistel.Ex1
    Clash.Feistel.Impl1a
    Clash.Feistel.Impl1b
    Clash.Feistel.Impl1c

    Clash.Feistel.Ex2
    Clash.Feistel.Impl2a
    Clash.Feistel.Impl2b
    Clash.Feistel.Impl2c

    Clash.Feistel.Impl3a
    Clash.Feistel.Impl3b
    Clash.Feistel.Impl3c

    Clash.Feistel.Util
  default-language:    Haskell2010


test-suite test-library
  import: common-options
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  ghc-options: -threaded
  main-is: tests.hs
  other-modules:
    Tests.Clash.Feistel.Impl1
    Tests.Clash.Feistel.Ex1
    Tests.Clash.Feistel.Impl2b
    Tests.Clash.Feistel.Ex2
    Tests.Clash.Feistel
  build-depends:
    clash-workshop,
    clash-prelude-hedgehog,
    hedgehog,
    tasty-hedgehog,
    tasty-hunit,
    tasty,
